--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "name": "changefiledirection",
   "displayName": "ChangeFileDirection",
   "description": "You can auto or command change window direction, you can activate this extension with alt+c and also deactivate same thing",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "engines": {
     "vscode": "^1.107.0"
   },
   "categories": [
     "Other"
   ],
-  
+  "icon" : "C:/Users/aero0/changefiledirection/changefiledirectory.jpg",
   "repository": {
     "type":"git",
     "url" : "https://github.com/donggae0629/ChangeFileDirectory.git"
